# euler-solutions

./: Cargo.toml  README.md  output.txt  rustfmt.toml
.github/workflows/: ci.yml
src/: main.rs  print.rs  problems_11_20.rs  problems_1_10.rs  problems_21_30.rs  problems_31_40.rs  test.rs  utils.rs
