[package]
name = "euler-solutions"
version = "0.0.0"
authors = ["will <william@rigney.com.au>"]
edition = "2021"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[dev-dependencies]
# snapshot testing
insta = "1.12.0"

[dependencies]
# fancy errors
color-eyre = "0.6.2"
# terminal colours
colored = "2.0.0"
# argument parsing
clap = { version = "4.2.7", features = ["derive"] }
# lazy static initialisation
once_cell = "1.17.1"