[package]
name = "euler-solutions"
version = "0.0.0"
authors = ["will <william@rigney.com.au>"]
edition = "2021"

[profile.release]
lto = "fat"
codegen-units = 1
# panic = "abort"

[dev-dependencies]
# snapshot testing
insta = "1.40.0"

[dependencies]
# fancy errors
color-eyre = "0.6.3"
# terminal colours
colored = "2.1.0"
# argument parsing
clap = { version = "4.5.17", features = ["derive"] }
# lazy static initialisation
once_cell = "1.19.0"
